# bedrock

./: .cproject  .gitignore  CMakeLists.txt  LICENSE  README.md  config.yml.example  server.config.example
Bedrock/: .cproject  .project
cmake/: Findlibevent.cmake  Findlibjansson.cmake  Findlibpthread.cmake  Findlibyaml.cmake  Windows.cmake
console/: CMakeLists.txt  console.c  socket.c
data/: player.yml
data/blocks/: air.yml  bed.yml  bedrock.yml  block_of_diamond.yml  block_of_gold.yml  block_of_iron.yml  block_slabs.yml  bookshelf.yml  brewing_stand.yml  brick_stairs.yml  bricks.yml  button.yml  cactus.yml  cake.yml  cauldron.yml  chest.yml  clay.yml  coal_ore.yml  cobblestone.yml  cobblestone_stairs.yml  cocoa_plant.yml  crafting_table.yml  dandelion.yml  detector_rail.yml  diamond_ore.yml  dirt.yml  dispenser.yml  dragon_egg.yml  emerald_ore.yml  enchantment_table.yml  end_portal.yml  end_portal_frame.yml  end_stone.yml  ender_chest.yml  farmland.yml  fence.yml  fenced_gate.yml  fire.yml  furnace.yml  glass.yml  (+75 more)
data/items/: bow.yml  chain_boots.yml  chain_cap.yml  chain_chestplate.yml  chain_leggings.yml  coal.yml  diamond_axe.yml  diamond_boots.yml  diamond_cap.yml  diamond_chestplate.yml  diamond_hoe.yml  diamond_leggings.yml  diamond_pickaxe.yml  diamond_shovel.yml  diamond_sword.yml  fishing_rod.yml  flint_and_steel.yml  gold_axe.yml  gold_boots.yml  gold_cap.yml  gold_chestplate.yml  gold_hoe.yml  gold_leggings.yml  gold_pickaxe.yml  gold_shovel.yml  gold_sword.yml  iron_axe.yml  iron_boots.yml  iron_cap.yml  iron_chestplate.yml  iron_hoe.yml  iron_leggings.yml  iron_pickaxe.yml  iron_shovel.yml  iron_sword.yml  leather_boots.yml  leather_cap.yml  leather_pants.yml  leather_tunic.yml  shears.yml  (+10 more)
data/recipes/: diamond_pickaxe.yml
data/recipies/: crafting_table.yml  wood_planks.yml
include/blocks/: blocks.h  items.h  window.h
include/command/: command_fdlist.h  command_help.h  command_me.h  command_memory.h  command_oper.h  command_players.h  command_shutdown.h  command_stats.h  command_teleport.h  command_time.h  command_uptime.h  command_version.h
include/compression/: compression.h
include/config/: hard.h
include/console/: console.h  ncurses.h  socket.h
include/io/: io.h
include/nbt/: nbt.h  tag.h
include/packet/: packet.h  packet_block_change.h  packet_block_placement.h  packet_chat_message.h  packet_client_status.h  packet_close_window.h  packet_collect_item.h  packet_column.h  packet_column_allocation.h  packet_column_bulk.h  packet_destroy_entity.h  packet_disconnect.h  packet_encryption_request.h  packet_encryption_response.h  (+18 more)
nbt/: CMakeLists.txt  dumper.h  editor.c  nbt.c  yml.c
server/: CMakeLists.txt
server/blocks/: blocks.c  items.c
server/command/: command_fdlist.c  command_gamemode.c  command_me.c  command_oper.c  command_players.c  command_shutdown.c  command_stats.c  command_teleport.c  command_time.c  command_version.c
server/config/: config.c
server/crafting/: crafting.c  recipe.c
server/entities/: chest.c  entity.c  furnace.c
server/packet/: packet_block_change.c  packet_block_placement.c  packet_change_game_state.c  packet_chat_message.c  packet_click_window.c  packet_client_settings.c  packet_client_status.c  packet_close_window.c  packet_collect_item.c  packet_column.c  packet_column_bulk.c  packet_confirm_transaction.c  packet_creative_inventory_action.c  packet_destroy_entity.c  packet_disconnect.c  packet_encryption_request.c  packet_encryption_response.c  packet_entity_action.c  packet_entity_animation.c  packet_entity_equipment.c  packet_entity_head_look.c  packet_entity_metadata.c  packet_entity_properties.c  packet_entity_teleport.c  packet_handshake.c  packet_held_item_change.c  packet_join_game.c  packet_keep_alive.c  packet_list_ping.c  packet_login.c  packet_login_response.c  packet_open_window.c  packet_ping.c  packet_player.c  packet_player_abilities.c  packet_player_digging.c  packet_player_list_item.c  packet_player_look.c  packet_plugin_message.c  packet_position.c  (+9 more)
server/physics/: items.c  physics.c  projectile.c
server/server/: bedrock.c  chunk.c  client.c  column.c  command.c  config.c  listener.c  oper.c  packet.c  region.c  signal.c  world.c
src/: CMakeLists.txt
src/console/: CMakeLists.txt  console.c  ncurses.c  socket.c
src/server/: CMakeLists.txt  bedrock.c  chunk.c  client.c  column.c  command.c  io.c  listener.c  oper.c  packet.c  region.c  signal.c  world.c
src/server/blocks/: blocks.c  items.c
src/server/command/: command_fdlist.c  command_help.c  command_me.c  command_memory.c  command_players.c  command_teleport.c  command_time.c  command_uptime.c
src/server/config/: config.c  parser.y
src/server/packet/: packet_block_change.c  packet_block_placement.c  packet_chat_message.c  packet_click_window.c  packet_client_settings.c  packet_client_status.c  packet_close_window.c  packet_collect_item.c  packet_column.c  packet_column_bulk.c  packet_confirm_transaction.c  packet_disconnect.c  packet_encryption_request.c  packet_encryption_response.c  packet_entity_action.c  packet_entity_animation.c  packet_entity_equipment.c  packet_entity_head_look.c  packet_entity_metadata.c  packet_handshake.c  packet_held_item_change.c  packet_list_ping.c  packet_player.c  packet_player_digging.c  packet_player_list_item.c  packet_position.c  packet_position_and_look.c  packet_set_slot.c  packet_spawn_dropped_item.c  packet_spawn_named_entity.c  packet_time.c
src/server/protocol/: console.c
src/server/server/: bedrock.c  chunk.c  client.c  column.c  command.c  listener.c  packet.c  region.c  signal.c  world.c
src/server/util/: buffer.c  compression.c  crypto.c  fd.c  file.c  list.c  pipe.c
src/util/: CMakeLists.txt  buffer.c  compression.c  crypto.c  fd.c  file.c  io.c  list.c  memory.c  pipe.c  string.c  thread.c  timer.c
util/: CMakeLists.txt  buffer.c  compression.c  endian.c  fd.c  math.c  memory.c  string.c  thread.c  util.c  uuid.c  yml.c
win32/: CMakeLists.txt  atomic.c  atomic.h  getopt.c  getopt.h  pipe.c  pipe.h  pthread.c  pthread.h  windows_time.c  windows_time.h
(+258 files in other folders)
